--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@ body{
 .heading{
     text-align: center;
     display: flex;
-    justify-content: center;  
+    justify-content: center;    
     color: lightgray;
+
 }
 .container{
     height: 70vh;
@@ -45,4 +46,28 @@ body{
     background-color: #50514F;
     color: white;
     border-radius: 1rem;
+}
+
+#new-game{
+    padding: 1rem;
+    font-size: 1.25rem;
+    background-color: #50514F;
+    color: white;
+    border-radius: 1rem;
+}
+#message{
+    color: lightgray ;
+    font-size: 5vmin;
+}
+.msgcontainer{
+    height: 100vmin;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 4rem;
+}
+
+.hide{
+    display: none;
 }
